--- a/Livraria/Livraria.App/Pages/Shared/_Layout.cshtml
+++ b/Livraria/Livraria.App/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Livro/Index">livros</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Livro/Index">Livros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Usuarios/Index">Usuários</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Instituicoes/Index">Instituições</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
