CRUD de Usuários utilizando os serviços da camada de negócios

--- a/Livraria/Livraria.App/Pages/Index.cshtml
+++ b/Livraria/Livraria.App/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bem vindo à melhor livraria do TJMT</h1>
+    <p><i><b>“A leitura engrandece a alma.” -</b></i> <a href="https://meuartigo.brasilescola.uol.com.br/atualidades/leitura-experiencia-conhecimento-qualidade-vida.htm">Voltaire</a>.</p>
 </div>
