--- a/Livraria/Livraria.App/Pages/Usuarios/Details.cshtml
+++ b/Livraria/Livraria.App/Pages/Usuarios/Details.cshtml
@@ -34,7 +34,7 @@
             @Html.DisplayNameFor(model => model.Usuario.InstituicaoDeEnsino)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Usuario.InstituicaoDeEnsino.Id)
+            @Html.DisplayFor(model => model.Usuario.InstituicaoDeEnsino.CNPJ)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Usuario.Email)
