--- a/Livraria/Livraria.App/Pages/Usuarios/Index.cshtml
+++ b/Livraria/Livraria.App/Pages/Usuarios/Index.cshtml
@@ -1,4 +1,4 @@
-﻿poxa@page
+﻿@page
 @model Livraria.App.Pages.Usuarios.IndexModel
 
 @{
@@ -48,7 +48,7 @@
                 @Html.DisplayFor(modelItem => item.CPF)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.InstituicaoDeEnsino.Id)
+                @Html.DisplayFor(modelItem => item.InstituicaoDeEnsino.CNPJ)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
