--- a/Livraria/Livraria.App/Pages/Livro/Create.cshtml
+++ b/Livraria/Livraria.App/Pages/Livro/Create.cshtml
@@ -61,7 +61,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Livro.IdUsuarioReserva" class="control-label"></label>
-                <select asp-for="Livro.IdUsuarioReserva" class ="form-control" asp-items="ViewBag.IdUsuarioReserva"></select>
+                <select asp-for="Livro.IdUsuarioReserva" class ="form-control" asp-items="ViewBag.IdUsuarioReserva">
+                    <option>Selecione</option>
+                </select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
