--- a/Livraria/Livraria.App/Pages/Livro/Edit.cshtml
+++ b/Livraria/Livraria.App/Pages/Livro/Edit.cshtml
@@ -61,7 +61,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Livro.IdUsuarioReserva" class="control-label"></label>
-                <select asp-for="Livro.IdUsuarioReserva" class="form-control" asp-items="ViewBag.IdUsuarioReserva"></select>
+                <select asp-for="Livro.IdUsuarioReserva" class="form-control" asp-items="ViewBag.IdUsuarioReserva">
+                    <option>Selecione</option>
+                </select>
                 <span asp-validation-for="Livro.IdUsuarioReserva" class="text-danger"></span>
             </div>
             <input type="hidden" asp-for="Livro.Id" />
