--- a/Livraria/Livraria.App/Pages/Livro/Index.cshtml
+++ b/Livraria/Livraria.App/Pages/Livro/Index.cshtml
@@ -78,7 +78,7 @@
                 @Html.DisplayFor(modelItem => item.Reservado)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.UsuarioReserva.Id)
+                @Html.DisplayFor(modelItem => item.UsuarioReserva.Nome)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
