--- a/Livraria/Livraria.App/Pages/Usuarios/Create.cshtml
+++ b/Livraria/Livraria.App/Pages/Usuarios/Create.cshtml
@@ -31,7 +31,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Usuario.IdInstituicaoDeEnsino" class="control-label"></label>
-                <select asp-for="Usuario.IdInstituicaoDeEnsino" class ="form-control" asp-items="ViewBag.NomeInstituicaoDeEnsino"></select>
+                <select asp-for="Usuario.IdInstituicaoDeEnsino" class="form-control" asp-items="ViewBag.IdInstituicaoDeEnsino">
+                    <option>Selecione</option>
+                </select>
             </div>
             <div class="form-group">
                 <label asp-for="Usuario.Email" class="control-label"></label>
