--- a/Livraria/Livraria.App/Pages/Usuarios/Edit.cshtml
+++ b/Livraria/Livraria.App/Pages/Usuarios/Edit.cshtml
@@ -31,7 +31,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="Usuario.IdInstituicaoDeEnsino" class="control-label"></label>
-                <select asp-for="Usuario.IdInstituicaoDeEnsino" class="form-control" asp-items="ViewBag.IdInstituicaoDeEnsino"></select>
+                <select asp-for="Usuario.IdInstituicaoDeEnsino" class="form-control" asp-items="ViewBag.IdInstituicaoDeEnsino">
+                    <option>Selecione</option>
+                </select>
                 <span asp-validation-for="Usuario.IdInstituicaoDeEnsino" class="text-danger"></span>
             </div>
             <div class="form-group">
